# COMPScrapper

./: .gitignore  INSTALACION.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
compscrapper/: __init__.py  cli.py  config.py  engine.py  export.py  geo.py  models.py  prompt.py  suggest.py  update.py
compscrapper/data/: paraguay_geo.json  prompt_sector.txt
compscrapper/data/sectores_semilla/: carne.json
gui/: __init__.py  app.py  asistente_ia.py  ayuda.py  editor_sector.py  estilo.py  pagina_inicio.py  pagina_resultados.py  selector_geografico.py  ventana_principal.py  worker.py
packaging/: compscrapper.spec  icono.icns  installer.iss  launch.py  make_dmg.sh
tests/: smoke_gui.py  test_config.py  test_engine.py  test_export.py  test_geo.py  test_prompt.py  test_update.py
