[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compscrapper"
dynamic = ["version"]
description = "Monitor de noticias sectoriales para detectar problemas de competencia en mercados nacionales y subnacionales (Paraguay)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "googlenewsdecoder>=0.1.7",
    "PySide6>=6.8",
]

[project.scripts]
compscrapper = "compscrapper.cli:main"

[tool.setuptools]
packages = ["compscrapper", "compscrapper.data"]

[tool.setuptools.package-data]
"compscrapper.data" = ["*.json", "sectores_semilla/*.json"]

[tool.setuptools.dynamic]
version = { attr = "compscrapper.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
